--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ nav {
     margin-right: auto;
     margin-left: auto;
     border-radius: 10px;
+    margin-top: 35px;
+}
+
+table{
+    margin-top: 40px;
 }
 
 .sidenav{
